# AlacriTEE

SLARuntime/: .gitignore  CMakeLists.txt  LICENSE
SLARuntime/include/: CMakeLists.txt
SLARuntime/include/SLARuntime/: CMakeLists.txt
SLARuntime/include/SLARuntime/Common/: Logging.hpp  SLAContract.hpp  SLARuntime.hpp  WasmCounter.hpp  WasmRuntime.hpp
SLARuntime/libs/: SimpleCMakeScripts  WasmCounter  WasmRuntime
SLARuntime/tests/: CMakeLists.txt
SLARuntime/tests/Blockchain/: GasEval.py  RunAndDeploy.py  SlaClient.py  SlaManager.py  SlaProvider.py  gas_eval.json  requirements.txt
SLARuntime/tests/End2End/: CMakeLists.txt  components_config.json
SLARuntime/tests/End2End/Trusted/: Certs.hpp  Enclave.cpp  Enclave.edl  Keys.hpp  SystemIO.hpp
SLARuntime/tests/End2End/Untrusted/: End2EndEnclave.hpp  Main.cpp  RunUntilSignal.hpp
SLARuntime/tests/samples/: .gitignore
SLARuntime/tests/samples/EnclaveEventMsg/: Makefile  main.c
SLARuntime/tests/samples/EnclaveWasmCommon/: common.c  common.h  natives.syms
WasmCounter/: CMakeLists.txt  LICENSE
WasmCounter/cmake/: StandaloneBuild.cmake  StandaloneDeps.cmake
WasmCounter/include/: CMakeLists.txt
WasmCounter/include/WasmCounter/: Exceptions.hpp  WasmCounter.hpp
WasmCounter/src/: AdjacencyJson.hpp  Block.hpp  BlockGenerator.hpp  CMakeLists.txt  Classification.hpp  CodeInjector.hpp  ExprIterater.hpp  Utils.hpp  UtilsMain.cpp  WasmCounter.cpp  WeightCalculator.hpp  make_unique.hpp
WasmCounter/tests/polybench/: .gitignore  2mm.c  2mm.h  3mm.c  3mm.h  WasmNative.cpp  adi.c  adi.h  atax.c  atax.h  bicg.c  bicg.h  cholesky.c  cholesky.h  correlation.c  correlation.h  covariance.c  covariance.h  deriche.c  deriche.h  doitgen.c  doitgen.h  durbin.c  durbin.h  enclave_wasm.c  enclave_wasm_natives.syms  fdtd-2d.c  fdtd-2d.h  floyd-warshall.c  floyd-warshall.h  gemm.c  gemm.h  gemver.c  gemver.h  gesummv.c  gesummv.h  gramschmidt.c  gramschmidt.h  heat-3d.c  heat-3d.h  (+26 more)
WasmCounter/tests/polybench/native/: Makefile
WasmCounter/tests/polybench/wasm/: Makefile
WasmRuntime/: CMakeLists.txt  LICENSE
WasmRuntime/include/: CMakeLists.txt
WasmRuntime/include/WasmRuntime/: EnclaveWasmNatives.hpp  Exception.hpp  ExecEnvUserData.hpp  FuncUtils.hpp  InstMemPtr.hpp  Logging.hpp  LoggingImpl.hpp  MainRunner.hpp  SharedObject.hpp  SharedWasmExecEnv.hpp  SharedWasmModule.hpp  SharedWasmModuleInstance.hpp  SharedWasmRuntime.hpp  SystemIO.hpp  WamrUniquePtr.hpp  WasmExecEnv.hpp  WasmModule.hpp  WasmModuleInstance.hpp  WasmRuntime.hpp  WasmRuntimeStaticHeap.hpp
WasmRuntime/include/WasmRuntime/Internal/: make_unique.hpp
WasmRuntime/src/: CMakeLists.txt  EnclaveWasmNatives.cpp  enclave_wasm_natives.c
WasmRuntime/tests/: CMakeLists.txt  copy-built-wasm.py  plot-graph.py  run-benchmark.py
WasmRuntime/tests/PolybenchTester/: CMakeLists.txt  Enclave.cpp  Enclave.edl  EnclaveMain.hpp  Main.cpp  SystemIO.hpp
sla-onchain/: Makefile
sla-onchain/contracts/: Interface_Reputation.sol  Interface_SlaManager.sol  Makefile  Reputation.sol  SLA.sol  SlaManager.sol
